# BypassTsinghua

./: .gitignore  README.md
00320254/: README.md
00320254/hw1/: hw1.md
00320254/hw2/: hw2.md
00320254/hw3/: hw3.md
00320262/: .gitignore  README.md
00320262/quiz1/: main.tex
00320262/week13/: main.tex
00320262/week14/: main.tex
00692172/: .gitignore  History_of_Scientific_Instrumentation.md  Notes.md  README.md
00740282/: .gitignore  README.md  problems.md  requirements.txt
00782712/: .gitignore  README.md  hw1.md  hw2.md
1.直流电桥测电阻/: 实验报告.md  实验数据记录表格.md
1.超导/: report.tex
10420803/: .gitignore  README.md
10430782/: .gitignore  README.md
10430792/: .gitignore  README.md
2.示波器原理和使用、声速测量/: 实验报告.md  实验数据记录表格.md
2.霍尔/: report.tex
20320074/: .gitignore  README.md
20740073/: .gitignore  README.md
3.偏振/: report.tex
3.透镜焦距的测量/: 实验报告.md  实验数据记录表格.md
30030622/: .gitignore  README.md
30320174/: README.md
30320211/: .gitignore  README.md  main.tex
30320472/: .gitignore  README.md
30320521/: README.md
30320562/: .gitignore  README.md
4.分光计的调节和色散曲线的测量/: 实验报告.md  实验数据记录表格.md
40320062/: README.md
40320832/: README.md  comp.sh
40320832/fluid/data/std/: README.md  meson.build
40320832/fluid/data/std/include/: eigin
40320832/fluid/data/std/src/: fluid.cpp
40880033/: .gitignore  README.md
5.三线摆和扭摆测转动惯量实验/: 实验报告.md  实验数据记录表格.md
6.阻尼振动和受迫振动/: 实验报告.md
7.准稳态法测不良导体的导热系数和比热/: 实验报告.md
7.超声/: report.tex
BeforeClassTask/: task1.md  task2.md
PK00333360/: README.md
data/: Chapter01.md  Chapter02.md  Chapter05.md
(+357 files in other folders)
